# xelbot

./: .env.example  .gitignore  .replit  BACKUP_GUIDE.md  Dockerfile  README.md  backup.sh  backup_database.py  bot.py  clean_and_repopulate.py  clean_turnover_data.py  compose.yml  debug_scraper.py  init_database.py  populate_database.py  pyproject.toml  quick_populate.py  quick_url_check.py  seed_sample_questions.py  setup.py  setup_jeopardy.py  test_answer_matching.py  test_scraper.py  update_air_dates.py  xelbot.service
attached_assets/: content-1749074536117.md
backups/: discord_bot_backup_20250604_230006.sql  test_backup_v3.sql
commands/: basic.py  jeopardy.py  turnover.py
data/: turnovers.csv  turnovers_cleaned.csv
database/: models.py
scraper/: improved_scraper.py  jeopardy_scraper.py
src/xelbot/: bot.py
src/xelbot/cli/: __init__.py  db.py  run.py
src/xelbot/commands/: __init__.py  basic.py  jeopardy.py  turnover.py
src/xelbot/database/: tools.py
src/xelbot/scraper/: jeopardy_scraper.py
src/xelbot/utils/: __init__.py  logger.py
utils/: logger.py
